styles/pages/partners.scss
.partners {
  position: relative;
  .breadcrumb-wrap {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    z-index: 2;
    .breadcrumb {
      color: $white-clr;
    }
  }
  &__banner {
    background-image: url(/assets/images/partner_hero_banner.png);
    background-size: cover;
    background-position: center;
    height: 550px;
    padding: $container-padding;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    position: relative;
    &::after {
      content: '';
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      z-index: 0;
      background: radial-gradient(50% 50% at 50% 50%, rgba(0, 0, 0, 0.62) 0%, rgba(0, 0, 0, 0) 100%);
    }
    &__lg_txt {
      color: $white-clr;
      font-size: 6.4rem;
      line-height: 7.4rem;
      font-weight: 700;
      text-align: center;
      margin-bottom: 1rem;
      position: relative;
      z-index: 1;
      @include responsive($tablet) {
        font-size: 4rem;
        line-height: 4.8rem;
      }
    }
    &__sm_txt {
      color: $white-clr;
      font-size: 2.4rem;
      line-height: 3rem;
      font-weight: 400;
      text-align: center;
      position: relative;
      z-index: 1;
      @include responsive($tablet) {
        font-size: 1.8rem;
        line-height: 2.4rem;
      }
    }
  }

  &__locations {
    &__title {
      // margin-bottom: 5rem;
      @include responsive($tablet) {
        // margin: 3rem 0;
      }
    }
    &__cards {
      display: flex;
      flex-wrap: wrap;
      justify-content: space-between;
      .location__card {
        width: 32%;
        @include responsive($tablet) {
          width: 48%;
        }
        @include responsive($mob) {
          width: 100%;
        }
       &__img {
        background-repeat: no-repeat;
        background-position: center;
        background-size: cover;
        height: 375px;
        border-radius: 12px;
        overflow: hidden;
        margin-bottom: 3rem;
        @include responsive($ipad-pro) {
          height: 280px;
        }
       } 
       &__title {
        text-align: center;
        margin-bottom: 2rem;
        font-size: 2.4rem;
        line-height: 3.2rem;
        color: $text-clr-primary;
        font-weight: 500;
        text-transform: capitalize;
       }
      }
    }
  }

  &__feat {
    display: flex;
    align-items: flex-start;
    flex-wrap: wrap;
    margin-left: calc((100% - 120rem)/2);
    padding-left: 1.5rem;
    @include responsive(1200) {
      margin-left: 0;
      padding-left: 1.5rem;
    }
    @include responsive($ipad-pro) {
      padding: 0 1.5rem;
      margin: 3rem 0;
    }
    &__right {
      width: 400px;
      margin-left: 10rem;
      @include responsive($ipad-pro) {
        display: none;
      }
    }
    &__left {
      width: calc(100% - 400px - 10rem);
      margin-top: 8rem;
      @include responsive($ipad-pro) {
        width: 100%;
        margin-top: 0;
      }
      .feat__title {
        text-align: center;
        margin-bottom: 3rem;
      }
      .feat__icons {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
        .feat__icon__wrap {
          margin-bottom: 3rem;
          display: flex;
          flex-direction: column;
          align-items: center;
          margin-right: 1rem;
          width: 200px;
          @include responsive($ipad) {
            width: 48%;
            margin-right: 0;
          }
          .feat__icon {
            margin-bottom: 1rem;
            @include responsive($tablet) {
              width: 100px;
              height: 100px;
            }
            @include responsive($mob) {
              width: 70px;
              height: 70px;
            }
          }
          .feat__icon__title {
            font-size: 2.4rem;
            line-height: 3.2rem;
            color: $text-clr-primary;
            font-weight: 500;
            @include responsive($mob) {
              font-size: 1.6rem;
              line-height: 2.2rem;
            }
          }
        }
      }
    }
  }

  &__join {
    background-color: #F7F7F7;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
    padding: 2rem 0;
    @include responsive($ipad-pro) {
      padding: 2rem $container-padding 2rem 0;
    }
    @include responsive(680) {
      justify-content: center;
      padding: 2rem $container-padding
    }
    &__left {
      margin-right: 2rem;
      width: calc(100% - 260px - 455px - 4rem);
      @include responsive($ipad-pro) {
        width: calc(100% - 455px - 2rem);
      }
      @include responsive($tablet) {
        width: calc(100% - 385px - 2rem);
      }
      @include responsive(680) {
        display: none;
      }
    }
    &__right {
      margin-top: auto;
      margin-left: 2rem;
      width: 260px;
      height: auto;
      @include responsive($ipad-pro) {
        display: none;
      }
    }
    &__middle {
      width: 455px;
      @include responsive($tablet) {
        width: 385px;
      }
      @include responsive(680) {
        width: 100%;
      }
    }
    &__title {
      margin-bottom: 5rem;
      @include responsive($tablet) {
        margin-bottom: 3rem;
      }
    }
    .common-card {
      .card-content {
        padding: 3rem 5rem;
        @include responsive(680) {
          padding: 2rem;
        }
      }
    }
  }
}

